# Mask-RCNN

./: .gitignore  CLAUDE.md  pyproject.toml
tests/: conftest.py  test_infrastructure.py
tests/integration/: test_example.py
tests/unit/: test_example.py
